--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <a href="#" class="in" title="Join us on Linked In"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
         </div>
-        <button>Voir tous les articles</button>
+        <button> <a href="post.html">Voir tous les articles</a> </button>
     </div>
 
 
